force-app/main/default/objects/Reservation__c/fields/Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services__c</fullName>
    <label>Number of Services</label>
    <summaryForeignKey>Service_Request__c.Reservation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>