force-app/main/default/objects/Reservation__c/fields/Reservation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Amount__c</fullName>
    <formula>Room__r.Price_per_Night__c * 
(Check_Out_Date__c - Check_In_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>