force-app/main/default/objects/Reservation__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summarizedField>Payment__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Payment__c.Reservation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>