force-app/main/default/objects/Reservation__c/validationRules/Check_Out_Before_Check_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_Before_Check_In</fullName>
    <active>true</active>
    <errorConditionFormula>Check_Out_Date__c &lt; Check_In_Date__c</errorConditionFormula>
    <errorMessage>Check-out date cannot be before check-in date.</errorMessage>
</ValidationRule>